--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   <div class="errormsg" id="errorlogin"></div>
                 </div>
                 <div class="justify-center">
-                    <button onclick="loginApi()">Login</button>
+                    <button onclick="loginApi()">Continue</button>
                     <h4>Don't have an account? <a href="./register.html">Sign up</a>.</h4>
                     <h5><a href="./admin.html">Admin acess</a></h5>
                 </div>
