Login admin page
Login admin page finished.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Ger's Garage - Login</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
                 <div class="justify-center">
                     <button onclick="loginApi()">Continue</button>
                     <h4>Don't have an account? <a href="./register.html">Sign up</a>.</h4>
-                    <h5><a href="./admin.html">Admin acess</a></h5>
+                    <h5><a href="./adminlogin.html">Admin acess</a></h5>
                 </div>
     </div>
     <script src="./scripts/indexscript.js"></script>
