--- a/admin.html
+++ b/admin.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Access</title>
+    <title>Ger's Garage - Admin</title>
+    <link rel="stylesheet" href="./styles/styleadmin.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container col-11 col-sm-8 col-md-6 col-lg-6" id="container">
+        <div class="logoandtext">
+            <img id="logo" src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
+            <h2 id="gergarage">Ger's Garage</h2>
+            </div>
+        <div class="row d-flex justify-content-center">
+            <div class="booking col-11 col-sm-7 col-md-7 col-lg-7" id="booking">
+                <p>Booking Id: 1</p>
+            </div>
+        </div>
+
+    </div>
+    <script src="./scripts/adminscript.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
