--- a/user.html
+++ b/user.html
@@ -7,7 +7,6 @@
     <title>Ger's Garage - Main</title>
     <link rel="stylesheet" href="./styles/styleuser.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 <body>
     <div class="container col-11 col-sm-8 col-md-6 col-lg-6" id="bookingcontainer">
@@ -15,7 +14,7 @@
             <img id="logo" src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
             <h2 id="gergarage">Ger's Garage</h2>
             </div>
-            <img src="./images/carimage1.jpg" alt="Hand with glove fixing the car" width="100%" height="100%">
+            <img src="./images/carimage1.jpg" alt="Hand with glove fixing a car" width="100%" height="100%">
         <h3 class="title">Book Your Repair or Maintance</h3>
         <h4 class="texttoleft">Car Details</h4>
         <div class='label-float'>
@@ -109,7 +108,6 @@
     
     <script src="./scripts/bookingscript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script></script>
 </body>
 </html>
