Draft admin bookings
First version of how the admin will view the bookins

--- a/admin.html
+++ b/admin.html
@@ -14,9 +14,43 @@
             <img id="logo" src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
             <h2 id="gergarage">Ger's Garage</h2>
             </div>
-        <div class="row d-flex justify-content-center">
+        <div class="row justify-content-center">
+            <select class="col-11 col-sm-7 col-md-7 col-lg-7" id="filterstatus">
+                <option>Booked</option>
+                <option>In Service</option>
+                <option>Completed</option>
+                <option>Collected</option>
+                <option>Unrepairable</option>
+              </select>
             <div class="booking col-11 col-sm-7 col-md-7 col-lg-7" id="booking">
-                <p>Booking Id: 1</p>
+                <div class="headerrow">
+                <img src="./images/caricon.png" alt="Car Icon" height="25">
+                <p class="headerbooking"><b>Major Repair - 20/02/2021</b></p>
+                </div>
+                <div class="center">
+                <p class="paragbooking"><b>Customer:</b> Gabriel Juca</p>
+                <p class="paragbooking"><b>Car: </b>Ford - Fiesta - 2021</p>
+                <p class="paragbooking"><b>Registration: </b>SFHD555BEN</p>
+                <div class="rowdirection">
+                <p class="paragbooking"><b>Mechanic: </b>John</p>
+                <p class="paragbooking"><b>Booked</b></p>
+                </div>
+            </div>
+            </div>
+            <div class="booking col-11 col-sm-7 col-md-7 col-lg-7" id="booking">
+                <div class="headerrow">
+                <img src="./images/caricon.png" alt="Car Icon" height="25">
+                <p class="headerbooking"><b>Major Repair - 20/02/2021</b></p>
+                </div>
+                <div class="center">
+                <p class="paragbooking"><b>Customer:</b> Gabriel Juca</p>
+                <p class="paragbooking"><b>Car: </b>Ford - Fiesta - 2021</p>
+                <p class="paragbooking"><b>Registration: </b>SFHD555BEN</p>
+                <div class="rowdirection">
+                <p class="paragbooking"><b>Mechanic: </b>John</p>
+                <p class="paragbooking"><b>Booked</b></p>
+                </div>
+            </div>
             </div>
         </div>
 
