--- a/admin2.html
+++ b/admin2.html
@@ -9,21 +9,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container col-11 col-sm-8 col-md-6 col-lg-6" id="container">
+    <div class="col col-11 col-sm-8 col-md-6 col-lg-6">
+        <div class="container row" id="containerheader">
         <div class="logoandtext">
             <img id="logo" src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
             <h2 id="gergarage">Ger's Garage</h2>
             </div>
-        <div class="row justify-content-center">
-            <button onclick="bookingByStatus()">Continue</button>
-            <select class="col-11 col-sm-7 col-md-7 col-lg-7" id="filterstatus">
+            <select id="filterstatus">
                 <option>Booked</option>
                 <option>In Service</option>
                 <option>Completed</option>
                 <option>Collected</option>
                 <option>Unrepairable</option>
               </select>
-            <div class="booking col-11 col-sm-7 col-md-7 col-lg-7" id="booking">
+        </div>
+        <div class="container row" id="containerbookings">
+            <div class="booking" id="booking">
                 <div class="headerrow">
                 <img src="./images/caricon.png" alt="Car Icon" height="25">
                 <p class="headerbooking"><b>Major Repair - 20/02/2021</b></p>
@@ -32,18 +33,9 @@
                 <p class="paragbooking"><b>Car: </b>Ford - Fiesta - 2021</p>
                 <p class="paragbooking"><b>Registration: </b>SFHD555BEN</p>
             </div>
-            
-            <div class="booking col-11 col-sm-7 col-md-7 col-lg-7" id="booking">
-                <div class="headerrow">
-                <img src="./images/caricon.png" alt="Car Icon" height="25">
-                <p class="headerbooking"><b>Major Repair - 20/02/2021</b></p>
-                </div>
-                <p class="paragbooking"><b>Customer:</b> Gabriel Juca</p>
-                <p class="paragbooking"><b>Car: </b>Ford - Fiesta - 2021</p>
-                <p class="paragbooking"><b>Registration: </b>SFHD555BEN</p>
-            </div>     
-        </div>
-        </div>
+            </div>
+    </div>
+    
     <script src="./scripts/adminscript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
