BookingDetails with draft of Pricing
BookingDetails updated with draft version of Pricing

--- a/bookingdetails.html
+++ b/bookingdetails.html
@@ -67,6 +67,60 @@
         </div>
         </div>
     </div>
+
+    <div class="container col-11 col-sm-8 col-md-6 col-lg-6" id="bookingcontainerchange">
+        <div class="booking col-11 col-sm-10 col-md-10 col-lg-10" id="changedetails">
+
+            <div class="parabookingrow" id="changedetailstitle">
+            <p class="paragbookingtitle"><b>Update Details</b></p>
+            <img src="./images/detailsicon.png" alt="Car Icon" height="25">
+        </div>
+        <div class="selectcontainer">
+            <p class="paragbooking"><b>Change Status:</b></p>
+            <select id="bookingstatus" onchange="changeBookingStatus()" class="w-50" id="filterstatus">
+            <option disabled selected>Select a status</option>
+            <option>Booked</option>
+            <option>In Service</option>
+            <option>Completed</option>
+            <option>Collected</option>
+            <option>Unrepairable</option>
+                </select>
+        </div>
+
+        <div class="selectcontainer">
+            <p class="paragbooking"><b>Change Mechanic:</b></p>
+            <select id="bookingmechanic" onchange="changeBookingMechanic()" class="w-50" id="filterstatus">
+            <option disabled selected>Select a mechanic</option>
+            <option>John</option>
+            <option>George</option>
+            <option>Ali</option>
+            <option>Jack</option>
+                </select>
+        </div>
+        <div class="errormsg" id="errormechanic"></div>
+
+        </div>
+    </div>
+
+    <div class="container col-11 col-sm-8 col-md-6 col-lg-6" id="invoicecontainer">
+        <div class="booking col-11 col-sm-10 col-md-10 col-lg-10" id="invoicedetails">
+
+            <p class="headerbooking"><b>Pricing Details</b></p>
+
+            <div class="parabookingrow">
+            <p class="paragbookingtitle"><b>Invoice</b></p>
+            <img src="./images/invoiceicon.png" alt="Invoice Icon" height="25">
+        </div>
+            <div id="invoice">
+                <p class="paraginvoice"><b>Annual service charge</b> ---- <b>Qnt:</b> 1 ---- <b>€39</b></p>
+            </div>
+
+            <div id="invoicetotal">
+                <p class="paraginvoicetotal"><b>Total price ----------------- €39</b></p>
+            </div>
+            
+        </div>
+    </div>
    
     <script src="./scripts/bookingdetailsscript.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
