--- a/register.html
+++ b/register.html
@@ -54,10 +54,10 @@
                   </div>
             </div>
             <div class="container containerhidden" id="confirmationcontainer">
-                <div class="logoandtext">
-                <img src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
-                <h2>Ger's Garage</h2>
-                </div>
+                <div class="logoandtext"><a href="./index.html">
+                    <img src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
+                    <h2>Ger's Garage</h2>
+                </a></div>
                 <h4>Registration completed. <a href="./login.html">Click here to login</a>.</h4>
             </div>
 
