--- a/roster.html
+++ b/roster.html
@@ -19,6 +19,7 @@
             <a href="./admin.html"><li class="menuoptions">Bookings</li></a>
             <a href="./roster.html"><li class="menuoptions">Roster</li></a>
           </ul>
+          <img src="./images/rosterpic.jpg" width="100%"/>
         <h5 id="pagetitle">Check roster by date:</h5>
         <div class='label-float'>
             <input onchange="selectDate()" id="date1" type="date" format="MM/DD/YYYY"  placeholder="MM/DD/YYYY"/>
