Invoice, LastDetais, Delete
Invoice page add
LastDetails button in booking
Delete function of bookingdetails

--- a/booking.html
+++ b/booking.html
@@ -51,6 +51,7 @@
               </select>
               <div class="errormsg" id="errorvehicleengine"></div>
         </div>
+        <div id="lastdetailsdiv"></div>
         <h4 class="texttoleft">Booking Details</h4>
 
         <div class='label-float'>
