--- a/bookingdetails.html
+++ b/bookingdetails.html
@@ -71,13 +71,10 @@
             <img src="./images/invoiceicon.png" alt="Invoice Icon" height="25">
         </div>
         <div id="invoice">
-            <p class="paraginvoice"><b>Annual service charge</b> - <b>Qnt:</b> 1 - <b>€39</b></p>
+            <table id="invoicetable">
+                </table>
+                <button id="getinvoice" onclick="openInvoice()">GET INVOICE</div>
         </div>
-
-        <div id="invoicetotal">
-            <p class="paraginvoicetotal"><b>Total price --------------- €39</b></p>
-        </div>
-        
         </div>
     </div>
 
