--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ger's Garage</title>
+    <title>Ger's Garage - Car Shop</title>
     <link rel="stylesheet" href="./styles/styleindex.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -71,7 +71,7 @@
               <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=CCT%20Dublin&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net"></a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">insert google map into wordpress</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:300px;}</style></div></div>
                 <div class="contacttext">
                   <h3>Contact</h3>
-                  <p>Address: 30-34 Westmoreland St, Dublin 2, D02 HK35. Dublin, Ireland.</p>
+                  <p>Address: 30 Westmoreland St, Dublin 2, D02 HK35. Dublin, Ireland.</p>
                   <p>Phone number: 08654875365</p>
                   <p>E-mail: admin@gersgarage.ie</p>
                   <p>www.gersgarage.ie</p>
