--- a/invoice.html
+++ b/invoice.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Invoice</title>
-    <link rel="stylesheet" href="./styles/styleinvoice.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./styles/styleinvoice.css" />
+  </head>
+  <body>
+    <!-- Simple invoice of booking to be printed -->
     <div id="invoice">
-        <h2>Ger's Garage</h2>
-        <table id="invoicetable"></table>
-        <h5>30-34 Westmoreland St, Dublin 2, D02 HK35. Dublin, Ireland</h5>
-        <h5>E-mail: admin@gersgarage.ie</h5>
-        <h5>Phone number: 08654875365</h5>
-        <h5>www.gersgarage.ie</h5>
+      <h2>Ger's Garage</h2>
+      <table id="invoicetable"></table>
+      <h5>30-34 Westmoreland St, Dublin 2, D02 HK35. Dublin, Ireland</h5>
+      <h5>E-mail: admin@gersgarage.ie</h5>
+      <h5>Phone number: 08654875365</h5>
+      <h5>www.gersgarage.ie</h5>
     </div>
-    
+
     <script src="./scripts/invoicescript.js"></script>
-</body>
+  </body>
 </html>
