--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-
+<!-- Container to input information of a customer and register an account -->
         <div class="container" id="registrationcontainer">
                 <div class="logoandtext"><a href="./index.html">
                 <img src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
@@ -53,6 +53,7 @@
                       <h4>Already have an account? <a href="./login.html">Login</a></h4>
                   </div>
             </div>
+            <!-- Container that appears after registration is completed -->
             <div class="container containerhidden" id="confirmationcontainer">
                 <div class="logoandtext"><a href="./index.html">
                     <img src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
