--- a/bookingdetails.html
+++ b/bookingdetails.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-
+<!-- Initial container with menu -->
     <div class="container col-11 col-sm-8 col-md-6 col-lg-6" id="containerheader">
         <div class="logoandtext"><a href="./index.html">
             <img id="logo" src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
@@ -21,7 +21,7 @@
           </ul>
         <h5 id="pagetitle">Check and change booking details:</h5>
     </div>
-
+<!-- Container to show booking information -->
     <div class="container col-11 col-sm-8 col-md-6 col-lg-6" id="bookingcontainer">
         <div class="booking col-11 col-sm-10 col-md-10 col-lg-10" id="bookingdetails">
 
@@ -77,7 +77,7 @@
         </div>
         </div>
     </div>
-
+<!-- Container to update booking details -->
     <div class="container col-11 col-sm-8 col-md-6 col-lg-6" id="bookingcontainerchange">
         <div class="booking col-11 col-sm-10 col-md-10 col-lg-10" id="changedetails">
 
