--- a/roster.html
+++ b/roster.html
@@ -1,37 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roster - Ger's Garage</title>
-    <link rel="stylesheet" href="./styles/styleroster.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
-
-    <div class="container col-11 col-sm-8 col-md-6 col-lg-6" id="containerheader">
-        <div class="logoandtext"><a href="./index.html">
-            <img id="logo" src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
-            <h2 id="gergarage">Ger's Garage</h2>
-        </a></div>
-        <ul class="menu">
-            <a href="./admin.html"><li class="menuoptions">Bookings</li></a>
-            <a href="./roster.html"><li class="menuoptions">Roster</li></a>
-          </ul>
-          <img src="./images/rosterpic.jpg" width="100%"/>
-        <h5 id="pagetitle">Check roster by date:</h5>
-        <div class='label-float'>
-            <input onchange="selectDate()" id="date1" type="date" format="MM/DD/YYYY"  placeholder="MM/DD/YYYY"/>
-            </div>
+    <link rel="stylesheet" href="./styles/styleroster.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <!-- Initial container with menu and input of date  -->
+    <div
+      class="container col-11 col-sm-8 col-md-6 col-lg-6"
+      id="containerheader"
+    >
+      <div class="logoandtext">
+        <a href="./index.html">
+          <img
+            id="logo"
+            src="./images/logonobg2.png"
+            alt="Ger's Garage Logo"
+            width="60"
+            height="60"
+          />
+          <h2 id="gergarage">Ger's Garage</h2>
+        </a>
+      </div>
+      <ul class="menu">
+        <a href="./admin.html"><li class="menuoptions">Bookings</li></a>
+        <a href="./roster.html"><li class="menuoptions">Roster</li></a>
+      </ul>
+      <img src="./images/rosterpic.jpg" width="100%" />
+      <h5 id="pagetitle">Check roster by date:</h5>
+      <div class="label-float">
+        <input
+          onchange="selectDate()"
+          id="date1"
+          type="date"
+          format="MM/DD/YYYY"
+          placeholder="MM/DD/YYYY"
+        />
+      </div>
+    </div>
+    <!-- Container that shows the bookings by date and mechanic -->
+    <div
+      class="container col-11 col-sm-8 col-md-6 col-lg-6"
+      id="bookingcontainer"
+    >
+      <p class="paragbooking"><b>Select date to see bookings</b></p>
     </div>
 
-    <div class="container col-11 col-sm-8 col-md-6 col-lg-6" id="bookingcontainer">
-
-        <p class="paragbooking"><b>Select date to see bookings</b></p>
-    </div>
-    
     <script src="./scripts/rosterscript.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
