Register text fixed
Text after registration had a problem

--- a/register.html
+++ b/register.html
@@ -59,7 +59,8 @@
                     <img src="./images/logonobg2.png" alt="Ger's Garage Logo" width="60" height="60">
                     <h2>Ger's Garage</h2>
                 </a></div>
-                <h4>Registration completed. <a href="./login.html">Click here to login</a>.</h4>
+                <h4>Registration completed.</h4>
+                <h4><a href="./login.html">Click here to login</a>.</h4>
             </div>
 
     <script src="./scripts/registerscript.js"></script>
